static/css/base.css
/*---------------Fonts*/
@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300&display=swap');

/*---------------Body & HTML Styling*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Barlow Condensed", sans-serif;
}

body {
    background: black;
    font-size: 1.5rem;
}

html {
    height: 100%;
    font-size: 12px;
    scroll-behavior: smooth;
}

section {
    padding: 3.9rem 0;
}

img {
    width: 100%;
    max-width: 100%;
}

a {
    text-decoration: none;
    color: #fff;
}

p {
    font-size: 1.5rem;
}

ul {
    list-style: none;
}

.text-black {
    color: black;
}

.container {
    width: 100%;
    max-width: 122.5rem;
    margin: 0 auto;
    padding: 0 2.4rem;
}

strong {
    color: #000;
}

/* base.html */
/*---------------Header*/

.main-logo-link {
    width: fit-content;
}
/*---------------Dropdown Menu*/
.dropdown-menu {
    font-size: 1.3rem;
}
/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

/* Index Page*/
/*-------------Hero*/
.hero {
    width: 100%;
    height: 100vh;
    background: url('/media/beef1.jpg') center no-repeat rgba(0, 0, 0, .2);
    background-size: cover;
    display: flex;
    align-items: center;
    text-align: center;
}

.sub-headline {
    font-size: 8.5rem;
    font-weight: 200;
    letter-spacing: 2px;
    opacity: 0;
    animation: fadeUp .5s forwards;
    animation-delay: .7s;
    text-transform: uppercase;
}

.headline {
    font-size: 5.5rem;
    text-transform: uppercase;
    letter-spacing: .5rem;
    animation: scale .8s forwards;
}

.single-animation {
    opacity: 0;
    animation: fadeDown .5s forwards;
    animation-delay: 1.5s;
}

.seperator {
    display: flex;
    align-items: center;
    justify-content: center;
}

.line {
    width: 100%;
    max-width: 20rem;
    height: .20rem;
    background-color: #fff;
    position: relative;
    opacity: 0;
    animation: grow 2s forwards;
    animation-delay: 1s;
}

.burger {
    font-size: 2rem;
    color: #fff;
    margin: 0 10px;
    opacity: 0;
    animation: fadeIn 2s forwards;
    animation-delay: .9s;

}

.headline-description h3 {
    text-transform: uppercase;
    margin-bottom: 1.2rem;
    letter-spacing: 3px;
}

.btn {
    display: inline-block;
    text-transform: uppercase;
    letter-spacing: 2px;
}

.cta-btn {
    padding: 1rem 2rem;
    font-size: 2rem;
    transition: background-color .5s;
}

.btn:hover,
.btn:focus {
    color: #fff;
    background-color: rgb(1, 4, 43);

}

.btn-black {
    background: black;
    color: white;
}

.btn-outline-black {
    background: white;
    color: black !important;
    /* use important to override link colors for <a> elements */
    border: 1px solid black;
}

.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
    background: black;
    color: white !important;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #222;
    color: white;
}

.text-black {
    color: #000 !important;
}

.border-black {
    border: 1px solid black !important;
}

.bg-black {
    background: #000 !important;
}

/*------------Our Burgers*/

.burger-imgages {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 1.5rem;
}

.about-headline {
    text-align: center;
    margin: 3rem;
}

.our-burgers .about-headline {
    margin-top: 6rem;
}

.section-info {
    text-align: center;
}

.section-description {
    margin-bottom: 3rem;
}

.section-description p {
    margin-bottom: 2rem;
}

.menu-btn {
    font-size: 2rem;
    position: relative;
    transition: background-color .5s;
}

/*--------------Inbetween Banner*/
.banner-images {
    background: url('/media/burger.jpg') center no-repeat;
    background-size: cover;
    opacity: 0.7;
}

.banner-fresh {
    background: url('/media/cooking.jpg') center no-repeat;
    background-size: cover;
    opacity: 0.7;
}

.between {
    min-height: 65vh;
    display: flex;
    align-items: center;
}

/*--------------About Us*/

.sub-headlines {
    font-size: 6rem;
}

.about-us .about-headline {
    margin-top: 6rem;
}

.about-us .section-info {
    display: flex;
}

.about-us .section-description p {
    padding: 10px;
}

/*--------------Ingredients*/
.ingredients .section-info {
    display: flex;
}

.ingredients .section-description p {
    padding: 10px;
}

/*--------------reviews*/
.review .section-info {
    display: flex;
}

.review .section-description p {
    padding: 10px;
}

/*--------------Footer*/

footer {
    padding: 3rem 0;
    color: fff;
    text-align: center;
    position: relative;
}

.footer-content {
    font-size: 1.5rem;
}

/* Menu Page */

.menu-section {
    padding: 0;
}

input[name='q']::placeholder {
    color: black;
}

.burger-container {
    height: 50vh;
}

.burger-container img {
    position: absolute;
    width: 400px;
    height: 400px;
    left: 0;
    margin: auto;
    right: 0;
    text-align: center;
    opacity: 0.8;
}

.menu-header {
    font-size: 8.5rem;
    font-weight: 200;
    letter-spacing: 2px;
    opacity: 0;
    animation: fadeUp .5s forwards;
    animation-delay: 1.5s;
}

.category a {
    font-size: 2rem;
    color: black;
}

.menu-items-container {
    display: flex;
    justify-content: center;
    align-items: center;
    background: white;
}

.food-items {
    position: relative;
    width: 1100px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 30px;
}

.food-items .card {
    max-width: 300px;
    height: 215px;
    background: black;
    margin: 30px 10px;
    padding: 20px 15px;
    display: flex;
    flex-direction: column;
    box-shadow: 0 5px 20px rgba(0, 0, 0, .5);
    transition: 0.3s ease-in-out;
}

.food-items .card:hover {
    height: 500px;
}

.food-items .card .imgbx {
    position: relative;
    width: 260px;
    top: -60px;
    left: 20px;
    z-index: 1;
    box-shadow: 0 5px 20px rgba(0, 0, 0, .2);
}

.food-items .card .imgbx img {
    max-width: 100%;
    border-radius: 4px;
}

.food-items .card .content {
    position: relative;
    margin-top: -140px;
    padding: 10px 15px;
    text-align: center;
    color: white;
    visibility: hidden;
    opacity: 0;
    transition: 0.3s ease-in-out;
}

.food-items .card:hover .content {
    visibility: visible;
    opacity: 1;
    margin-top: -40px;
    transition-delay: 0.3s;
}

/* Product Details */
.product-details-container p, h4 {
    font-size: 2rem;
}

.fa-check {
    color: green;
}

.close-right {
    right: 0;
}

.text-red {
    color: red;
}

/* About Us Page */
.about-hero {
    width: 100%;
    height: 300px;
    background: url('/media/about.jpg') center no-repeat rgba(0, 0, 0, .2);
    background-size: cover;
    display: flex;
    align-items: center;
    text-align: center;
}

.headlines {
    font-size: 3rem;
    text-transform: uppercase;
    letter-spacing: .5rem;   
}

.our-story p {
    font-size: 1.8rem;
}

/* suppliers */
.suppliers-hero {
    width: 100%;
    height: 300px;
    background: url('/media/fresh.jpg') center no-repeat rgba(0, 0, 0, .2);
    background-size: cover;
    display: flex;
    align-items: center;
    text-align: center;
}

.supplier-details p {
    color: #000;
}

.supplier-details a {
    color: #000;
}

/* Reviews */
.review-hero {
    width: 100%;
    height: 300px;
    background: url('/media/review.jpg') center no-repeat rgba(0, 0, 0, .2);
    background-size: cover;
    display: flex;
    align-items: center;
    text-align: center;
}

.form-text {
    width: 100%;
}
.form-check {
    display: inline;
    padding: 10px;
}

.form-check-input{
    margin-top: .6rem;
}

.list-group-flush .list-group-item {
    border-color: white;
}
/* Shoping Cart */
th {
    font-size: 1.5rem;
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

/* bootstrap toasts */
.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 999999999999;
}

.toast {
    font-size: 1rem;
}
.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

/* Ingredients buttons */
.ingredients {
    position: relative;
    display: inline-block;
}

.ingredients li {
    list-style: none;
}

.ingredients li label input[type="checkbox"] {
    position: absolute;
    opacity: 0;
    cursor: pointer;    
}

.ingredients li label .name {
    border-radius: 10px;
    border: black;
    border-style: solid;
    margin: 0 10px;
    cursor: pointer;
    width: 200px;
    background-color:#6c757d;
    
}
.ingredients li label input[type="checkbox"]:checked ~ .name {
    background-color: rgb(1, 4, 43);
}


.profile-img {
    width: 200px;
    padding: 20px;
}

/* Allauth form formatting */

.allauth-form-inner-content a {
    color: #17a2b8;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

/* Forms */
.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 50%;
    min-height: 500%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* Media Queries */
@media (max-width: 991px) {

    .review .section-info,
    .ingredients .section-info,
    .about-us .section-info {
        display: block;
    }

    .sub-headline,
    .sub-headlines {
        font-size: 4rem;
    }

    .headline {
        font-size: 3rem;
    }

    .menu-header {
        font-size: 3rem;
    }

    .tabs.verticle {
        width: 30%;
        max-width: 30%;
    }

    .category {
        font-size: 1.5rem;
    }
    
    .our-story p {
        font-size: 1.5rem;
    }
}

form {
    padding: 20px;
}

.form-control {
    font-size: 1.5rem;
}

.card {

    background: #fff;
    margin: 30px 10px;
    padding: 20px 15px;
}

/* Animations */

@keyframes fadeUp {
    from {
        transform: translateY(4rem);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

@keyframes scale {
    from {
        transform: scale(5);
    }

    to {
        opacity: 1;
        transform: scale(1);
    }
}

@keyframes grow {
    from {
        width: 0;
    }

    to {
        opacity: 1;
        width: 100%;
    }
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes fadeDown {
    from {
        transform: translateY(-4rem);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

